// Copyright (c) 2020 Red Hat, Inc.

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.open_cluster_management.multicloud_operators_foundation.pkg.proxyserver.apis.v1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// ClusterStatus about a registered cluster in a federated kubernetes setup.
message ClusterStatus {
  // Standard object's metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;
}

// ClusterStatusList is a list of all the kubernetes clusters status in the acm
message ClusterStatusList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of Cluster objects.
  repeated ClusterStatus items = 2;
}

// ClusterStatusProxyOptions is the option for ClusterStatus
message ClusterStatusProxyOptions {
  // Path is the URL path to use for the current proxy request
  // +optional
  optional string path = 1;
}

